refactor(architecture): create mapper to create responses, separating the responsabilities on the services classes